<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#D8D8D8"
    tools:context=".Music">

    <Button
        android:id="@+id/btnLesson1"
        android:text="@string/lesson1"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLesson2"
        android:text="@string/lesson2"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLesson3"
        android:text="@string/lesson3"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLesson4"
        android:text="@string/lesson4"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLesson5"
        android:text="@string/lesson5"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
