<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#D8D8D8"
    android:screenOrientation="portrait"
    tools:context=".AudioAppActivity"
    >

    <TextView
        android:text="@string/appname"
        android:textAlignment="center"
        android:textColor="#2E2E2E"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edStudent"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="#2E2E2E"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edLesson"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="#2E2E2E"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/mp3Image"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/guitarra"
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_margin="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkRecord"
            android:text="@string/record"
            android:textColor="#2E2E2E"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="recordCheckBox" />

        <CheckBox
            android:id="@+id/chkListen"
            android:text="@string/listen"
            android:checked="true"
            android:textColor="#2E2E2E"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="listenCheckBox" />


        <ImageButton
            android:id="@+id/btnInterrogation"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@drawable/interrogation"
            android:onClick="Interrogation"/>

        <Button
            android:id="@+id/btnSendAudio"
            android:text="Enviar Audio"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <TextView
        android:id="@+id/songDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"
        android:text="@string/songduration" />


    <SeekBar
        android:id="@+id/seekBar"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playAudio"
            android:src="@drawable/playbutton"
            android:layout_marginLeft="10dp"
            />

        <ImageButton
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopClicked"
            android:src="@drawable/pausebutton"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.32" />


        <ImageButton
            android:id="@+id/recordButton"
            android:src="@drawable/recordbutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="recordAudio"
            android:layout_marginLeft="10dp" />

        <ImageButton
            android:id="@+id/RewindButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="forward"
            android:src="@drawable/rewindbutton"
            android:layout_marginLeft="10dp"
            />

        <ImageButton
            android:id="@+id/FowardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rewind"
            android:src="@drawable/fastfowardbutton"
            android:layout_marginLeft="10dp"
            />



    </LinearLayout>




</LinearLayout>
